<resources>
    <string name="app_name">36氪</string>
    <string name="activity_collect_item_title">标题</string>
    <string name="activity_collect_item_time">时间</string>
    <string name="activity_collect_item_context">内容</string>
    <string name="discover_entrepreneurs_Business">创业者</string>
    <string name="discover_entrepreneurs_SubmitComenpy">提交公司</string>
    <string name="discover_investor_now_certification">立即认证</string>
    <string name="discover_investor_36">36氪指数</string>
    <string name="equity_company_allActivity">查看全部项目</string>
    <string name="look_investor_lookPerson">寻找投资人</string>
    <string name="look_investor_attention">关注领域:</string>
    <string name="look_investor_investorPhases">投资阶段:</string>
    <string name="mine_collect_my_collect">我的收藏</string>
    <string name="mine_collect_authorName">名字</string>
    <string name="mine_collect_time">时间</string>
    <string name="mine_message_userName">账号信息</string>
    <string name="mine_message_save">保存</string>
    <string name="mine_message_myUserName">用户昵称</string>
    <string name="mine_message_customize">自定义名称</string>
    <string name="mien_message_trueName">真是姓名</string>
    <string name="mine_meaasge_introduction">简介</string>
    <string name="mine_message_myCare">关注的领域</string>
    <string name="mine_message_locality">所在地</string>
    <string name="mine_orders">我的订单</string>
    <string name="mine_set_out">退出登录</string>
    <string name="mine_set_feedback">意见反馈</string>
    <string name="mine_set_newEdition">检查新版本</string>
    <string name="search">搜索新闻/用户/公司</string>
    <string name="set_message">消息设置</string>
    <string name="_8_00_22_00">如果设置 [只在白天开启],则只在8:00-22:00之间生效</string>
    <string name="my_set_message">可及时和创业者及投资人沟通交流</string>
    <string name="equity_item_investment">领投方</string>
    <string name="equity_item_founder">创始人</string>
    <string name="equity_item_teamPerson">团队成员</string>
    <string name="equity_item_fundraising">幕资中</string>
    <string name="equity_item_finish">已幕资:</string>
    <string name="discover_last_news">行业新闻</string>
    <string name="discover_last_trends">行业动态</string>
    <string name="discover_last_activity">投资活动</string>
    <string name="discover_last_goodActivity">发现好项目</string>
    <string name="discover_last_lookInvent">寻找投资人</string>
    <string name="discover_last_goodItemMessage">投资人每天都在看</string>
    <string name="discover_last_message">顶级机构全面入驻</string>
    <string name="discover_entrepreneur">我是创业者</string>
    <string name="discover_inventors">我是专业投资人</string>
    <string name="discover_company">创业公司</string>
    <string name="Research_36">36氪研究院</string>
    <string name="discover_tab_nowActivity">近期活动</string>
    <string name="discover_tab_hotResearch">热门项目</string>
    <string name="discover_look_all">查看全部</string>
    <string name="discover_express">投资速递</string>
    <string name="discover_knowInvert">快速了解股权投资</string>
    <string name="equity_invent">股权投资</string>
    <string name="mine_order">我的订单</string>
    <string name="mine_collect_text">我收藏的文章</string>
    <string name="mine_invent_company">我投资的公司</string>
    <string name="mine_investment">我的投资劵</string>
    <string name="mine_knowInvert">了解股权投资</string>
    <string name="mine_message">账号信息</string>
    <string name="_400_995_3636">呼叫 400-995-3636</string>
    <string name="_10_00_19_00">工作日: 10:00-19:00</string>
    <string name="locad_acquire">本地获取</string>
    <string name="mine_camear">拍照</string>
    <string name="mine_cancel">取消</string>
    <string name="drawer_all">全部</string>
    <string name="drawer_demoDay">DemoDay</string>
    <string name="drawer_krSpace">氪空间</string>
    <string name="drawer_invernt">股权投资</string>
    <string name="drawer_rapidly">极速融资</string>
    <string name="popu_supportAuthor">支持作者</string>
    <string name="popu_light">屏幕亮度</string>
    <string name="new_drawer_krTv_message">视频信息</string>
</resources>
