<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:padding="@dimen/layout_margin_ten">

    <TextView
        android:id="@+id/mine_message_camera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="@dimen/layout_margin_ten"
        android:text="@string/mine_camear"
        android:textSize="@dimen/text_size_twenty" />

    <TextView

        android:id="@+id/mine_message_localImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="@dimen/layout_margin_ten"
        android:text="@string/locad_acquire"
        android:textSize="@dimen/text_size_twenty" />

    <TextView
        android:id="@+id/mine_message_close"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="@dimen/layout_margin_ten"
        android:text="@string/mine_cancel"
        android:textSize="@dimen/text_size_twenty" />
</LinearLayout>