<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/discovery_last_news"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/text_size_twenty"
            android:layout_marginTop="@dimen/text_size_twenty"
            android:layout_weight="1"
            android:background="@drawable/discovery_title_shape"
            android:gravity="center_horizontal"
            android:padding="@dimen/layout_margin_five"
            android:text="@string/discover_last_news"
            android:textSize="@dimen/text_size_twenty" />

        <TextView
            android:id="@+id/discovery_last_dynamic"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_size_twenty"
            android:layout_weight="1"
            android:background="@drawable/discovery_title_shape"
            android:gravity="center_horizontal"
            android:padding="@dimen/layout_margin_five"
            android:text="@string/discover_last_trends"
            android:textSize="@dimen/text_size_twenty" />

        <TextView
            android:id="@+id/discovery_last_activity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/text_size_twenty"
            android:layout_marginTop="@dimen/text_size_twenty"
            android:layout_weight="1"
            android:background="@drawable/discovery_title_shape"
            android:gravity="center_horizontal"
            android:padding="5dp"
            android:text="@string/discover_last_activity"
            android:textSize="@dimen/text_size_twenty" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#D3D3D3" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="@dimen/text_size_twenty"
        android:orientation="horizontal">


        <LinearLayout
            android:id="@+id/discovery_last_goodDemo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_size_twenty"
            android:layout_weight="1"
            android:background="@mipmap/discovery_ph_item"
            android:orientation="vertical"
            android:padding="@dimen/size_fifteen">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/discover_last_goodActivity"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="@dimen/text_size_twenty" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/discover_last_goodItemMessage"
                android:textColor="#808080"
                android:textSize="@dimen/size_fifteen" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/discovery_last_discoverInvestor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_size_twenty"
            android:layout_weight="1"
            android:background="@mipmap/discovery_ph_investor"
            android:orientation="vertical"
            android:padding="@dimen/size_fifteen">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/discover_last_lookInvent"
                android:textColor="#00ff00"
                android:textSize="@dimen/text_size_twenty" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/discover_last_message"
                android:textColor="#808080"
                android:textSize="@dimen/size_fifteen" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/discovery_last_entrepreneurs"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_fifty"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/discovery_icon_entrepreneurs" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/size_fifteen"
            android:layout_marginRight="@dimen/text_size_twoHundred"
            android:text="@string/discover_entrepreneur"
            android:textSize="@dimen/size_fifteen" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/discovery_icon_list_arrow" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#d3d3d3" />

    <LinearLayout
        android:id="@+id/discovery_last_investors"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_fifty"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/discovery_icon_new_investor" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="170dp"
            android:text="@string/discover_inventors"
            android:textSize="@dimen/size_fifteen" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/discovery_icon_list_arrow" />
    </LinearLayout>
</LinearLayout>