<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/layout_margin_ten">

        <ImageView
            android:id="@+id/mine_message_backOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/news_toolbar_icon_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/mine_message_userName"
            android:textSize="@dimen/text_size_twenty"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/mine_message_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/mine_message_save"
            android:textSize="@dimen/text_size_twenty" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#f0f0f0" />

    <com.example.dllo.a36kr.main.tools.RoundImage
        android:id="@+id/mine_message_headIv"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/layout_margin_ten"
        android:src="@mipmap/common_avatar" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#f0f0f0" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/layout_margin_ten">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mine_message_myUserName"
            android:textSize="@dimen/size_fifteen" />

        <EditText
            android:id="@+id/mine_message_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:gravity="right"
            android:hint="@string/mine_message_customize" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#f0f0f0" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/layout_margin_ten">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mien_message_trueName"
            android:textSize="@dimen/size_fifteen" />

        <EditText
            android:id="@+id/mine_message_trueName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:gravity="right"
            android:hint="请填写真实姓名" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#f0f0f0" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/layout_margin_ten">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mine_meaasge_introduction"
            android:textSize="@dimen/size_fifteen" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:id="@+id/mine_message_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:src="@mipmap/discovery_icon_list_arrow" />

            <EditText
                android:id="@+id/mine_message_introduction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/layout_margin_five"
                android:layout_toLeftOf="@id/mine_message_arrow"
                android:background="@null"
                android:text="无" />
        </RelativeLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_margin_ten"
        android:background="#f0f0f0" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/layout_margin_ten">

        <TextView
            android:id="@+id/mine_message_domain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mine_message_myCare"
            android:textSize="@dimen/size_fifteen" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:src="@mipmap/discovery_icon_list_arrow" />
        </RelativeLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#f0f0f0" />

    <LinearLayout
        android:id="@+id/mine_message_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/layout_margin_ten">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mine_message_locality"
            android:textSize="@dimen/size_fifteen" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:src="@mipmap/discovery_icon_list_arrow" />
        </RelativeLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="#f0f0f0" />

    <LinearLayout
        android:id="@+id/mine_message_bind"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/layout_margin_ten">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="绑定其他平台"
            android:textSize="@dimen/size_fifteen" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:src="@mipmap/discovery_icon_list_arrow" />
        </RelativeLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#f0f0f0" />
</LinearLayout>