<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_margin_ten"
        android:background="#bfbfbf" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/layout_margin_ten">

        <com.example.dllo.a36kr.main.tools.RoundImage
            android:id="@+id/equity_item_head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_launcher"
            app:is_round="true" />

        <TextView
            android:id="@+id/equity_item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/equity_item_head"
            android:text="华佗驾到"
            android:textSize="@dimen/text_size_twenty"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/equity_item_introduce"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/equity_item_head"
            android:layout_toRightOf="@id/equity_item_head"
            android:maxLines="1"
            android:text="简介" />

        <TextView
            android:id="@+id/equity_item_concern"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/equity_title_shape"
            android:padding="@dimen/layout_margin_five"
            android:text="关注"
            android:textSize="@dimen/size_fifteen" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/equity_item_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_launcher" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/layout_margin_ten"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_margin_five"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/equity_item_invest_before"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/equity_item_investment" />

            <TextView
                android:id="@+id/equity_item_invest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="领投方" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_margin_five"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/equity_item_founder_before"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/equity_item_founder" />

            <TextView
                android:id="@+id/equity_item_founder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="领投方" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_margin_five"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/equity_item_team_before"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/equity_item_teamPerson" />

            <TextView
                android:id="@+id/equity_item_team"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="领投方" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_margin="@dimen/layout_margin_five"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/equity_item_fundraising"/>
            <TextView
                android:layout_margin="@dimen/layout_margin_five"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/equity_item_finish"/>
            <TextView
                android:id="@+id/item_equip_all_rate"
                android:layout_margin="@dimen/layout_margin_five"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"/>
            <TextView
                android:layout_margin="@dimen/layout_margin_five"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="%"/>
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            style="?android:attr/progressBarStyleHorizontal"
            android:max="100"
            android:progress="50"/>
    </LinearLayout>



</LinearLayout>